@@ -2095,7 +2095,7 @@ begin
      categoryKeyword( e );
      description( e, "The subtype statement will create a type that is " &
                   "compatible with the original, as if it was a renaming of the original type. " );
-     content( e, "subtype newtype is [abstract] oldtype " );
+     content( e, "subtype newtype is [abstract|limited] oldtype " );
      seeAlso( e, "doc/ref_typedecl.html" );
      endHelp( e );
   elsif helpTopic = "System" then
@@ -2158,7 +2158,7 @@ begin
                   "incompatible with the original type.  It is also " &
                   "used to create array, record and enumerated types. " &
                 "See also subtypes.");
-     content( e, "type newtype is new [abstract] oldtype" );
+     content( e, "type newtype is new [abstract|limited] oldtype" );
      content( e, "type newtype is ( enum1 [,enum2...] )" );
      content( e, "type newtype is [abstract] record field1 : type1 [;field2...] end record" );
      content( e, "type newtype is [abstract] array( low..high) of item_type [:= array( item,...)]" );
